# NovaOS

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  HANDOVER.md  NovaOS_Memory_Error_Spec.md  NovaOS_Proposal.md  NovaOS_Syscall_Design.md  NovaOS_Verification_Spec.md  Project_Progress.md  build.ps1  check_mb.py  clippy.toml  gcc.cmake  init_env.ps1  run_qemu.ps1  rustfmt.toml  test.ps1  test_output.txt
libs/libnova/: Cargo.toml
libs/libnova/src/: cap.rs  console.rs  env.rs  ipc.rs  lib.rs  syscall.rs  tcb.rs
libs/seL4-sys/: Cargo.toml  build.rs
libs/seL4-sys/src/: lib.rs  wrapper.h
services/: README.md
services/fs_server/: Cargo.toml
services/fs_server/src/: main.rs
services/rootserver/: Cargo.toml  build.rs  linker.lds
services/rootserver/src/: acpi.rs  allocator.rs  apic.rs  check_consts.rs  crypto.rs  elf_loader.rs  filesystem.rs  ioapic.rs  ipc.rs  keyboard.rs  main.rs  memory.rs  port_io.rs  process.rs  serial.rs  services.rs  shared_memory.rs  shell.rs  tests.rs  utils.rs  vfs.rs  vspace.rs
services/rootserver/src/arch/x86_64/: acpi.rs  apic.rs  ioapic.rs  mod.rs  pci.rs  port_io.rs  serial.rs
services/rootserver/src/drivers/: ata.rs  block.rs  keyboard.rs  mod.rs  rtc.rs  serial.rs  timer.rs
services/rootserver/src/fs/: block_cache.rs  mod.rs  novafs.rs  simplefs.rs  strategy.rs
services/rootserver/src/runtime/: console.rs  mod.rs
services/serial_server/: Cargo.toml
services/serial_server/src/: main.rs
services/user_app/: Cargo.toml
services/user_app/.cargo/: config.toml
services/user_app/src/: allocator.rs  main.rs  syscalls.rs
